--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,12 @@
 			<artifactId>jersey-servlet</artifactId>
 			<version>1.16</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-client</artifactId>
+			<version>1.16</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk</artifactId>
